--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
     "meilisearch": "^0.36.0",
     "react": "^18.2.0",
