--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-tooltip": "^5.26.0"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
